package at.htl.entity;

public enum Group {

    ANFAENGER,
    KOENNER,
    PROFIS,
    UNBEKANNT

}
