@startuml

abstract class Person {
- id : long
- firstname : String
- lastname : String
- age : int
}

class Skiteacher {
- salary : int
}

class Skistudent{
}

class Course{
- id : long
- name : String
- member : int
- aGroup : Group
- teacher : Skiteacher
}

class Booking{
- id : long
- student : Skistudent
- course : Course
}

enum Group {
ANFAENGER
KOENNER
PROFIS
UNBEKANNT
}

Course "1" *--> "*" Skiteacher
Booking "1" *--> "*" Skistudent
Booking "*" *--> "1" Course
Skiteacher --|> Person
Skistudent --|> Person
Course "1" *--> "1" Group
@enduml
